--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,44 @@
+# =============================================================================
+# Dependências Python do Doc Parser API
+#
+# torch / torchvision NÃO estão aqui — são fornecidos pela imagem Docker
+# (rocm/pytorch). Para dev local, instale separadamente:
+#   pip install -r requirements-torch.txt
+#   pip install -r requirements.txt
+# =============================================================================
+
+# --- PDF e Imagem ---
 pdfplumber>=0.11.0          # Extração de texto digital + tabelas
 pypdf>=4.0.0                # Manipulação de PDFs
 pdf2image>=1.17.0           # Converter PDF para imagem
 Pillow>=10.0.0              # Processamento de imagem
 
+# --- Processamento de Imagem ---
 opencv-python>=4.9.0        # Deskew, binarização, filtros
 numpy>=1.24.0               # Arrays e operações numéricas
 scikit-image>=0.22.0        # Algoritmos de imagem avançados
 
-torch>=2.0.0                # PyTorch com suporte ROCm
+# --- OCR ---
 python-doctr>=0.8.0         # OCR + Layout detection (PyTorch)
 transformers>=4.35.0        # Modelos Hugging Face (opcional)
 pytesseract>=0.3.10         # Interface Python para Tesseract OCR (opcional)
 
+# --- Tabelas ---
 camelot-py[base]>=0.11.0    # Tabelas de PDFs digitais
 ghostscript                 # Dependência do camelot (instalar via sistema)
 
+# --- PDF Output ---
 reportlab>=4.0.0            # Geração de PDF (overlay de texto pesquisável)
 
-tqdm>=4.66.0                # Barras de progresso
-pydantic>=2.5.0             # Validação de schema JSON
-python-dotenv>=1.0.0        # Configurações
+# --- API ---
+fastapi>=0.115.0            # Framework web async
+uvicorn[standard]>=0.30.0   # ASGI server
+python-multipart>=0.0.9     # Upload de arquivos (FastAPI)
 
-# Dev / Testes
+# --- Utilitários ---
+pydantic>=2.5.0             # Validação de schema JSON
+python-dotenv>=1.0.0        # Configurações via .env
+
+# --- Dev / Testes ---
 pytest>=8.0.0               # Framework de testes
+httpx>=0.27.0               # HTTP client para testes FastAPI
