Translate alll text from pt to en

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,33 @@
 # =============================================================================
-# Doc Parser API — Variáveis de Ambiente
+# Doc Parser API — Environment Variables
 #
-# Copie para .env e ajuste conforme necessário:
+# Copy to .env and adjust as needed:
 #   cp .env.example .env
 #
-# Todas as variáveis são opcionais. Valores abaixo são os defaults.
+# All variables are optional. Values below are the defaults.
 # =============================================================================
 
 # --- GPU / Device ---
-# Auto-detecta se omitido. Defina "false" para forçar CPU.
+# Auto-detects if omitted. Set "false" to force CPU.
 # DOC_PARSER_USE_GPU=true
 
 # --- OCR Engine ---
-# "doctr" (deep learning, requer GPU) ou "tesseract" (LSTM, CPU)
+# "doctr" (deep learning, requires GPU) or "tesseract" (LSTM, CPU)
 # DOC_PARSER_OCR_ENGINE=doctr
 
-# --- OCR Configurações ---
-# DPI para conversão de PDF → imagem (maior = melhor qualidade, mais lento)
+# --- OCR Settings ---
+# DPI for PDF to image conversion (higher = better quality, slower)
 # DOC_PARSER_OCR_DPI=350
 
-# Tamanho do batch para docTR (ajustar conforme VRAM disponível)
-# 20 = bom para 20GB VRAM, reduzir se OOM
+# Batch size for docTR (adjust according to available VRAM)
+# 20 = good for 20GB VRAM, reduce if OOM
 # DOC_PARSER_OCR_BATCH_SIZE=20
 
-# Confiança mínima para aceitar resultado OCR (0.0 a 1.0)
-# Pode ser sobrescrito por request via ?min_confidence=
+# Minimum confidence to accept OCR result (0.0 to 1.0)
+# Can be overridden per request via ?min_confidence=
 # DOC_PARSER_MIN_CONFIDENCE=0.3
 
-# --- OCR Orientação (docTR) ---
+# --- OCR Orientation (docTR) ---
 # DOC_PARSER_ASSUME_STRAIGHT_PAGES=true
 # DOC_PARSER_DETECT_ORIENTATION=false
 # DOC_PARSER_STRAIGHTEN_PAGES=false
@@ -36,20 +36,20 @@
 # DOC_PARSER_OCR_LANG=por
 # DOC_PARSER_TESSERACT_CONFIG=--oem 1 --psm 3
 
-# --- Pós-processamento ---
-# Podem ser sobrescritos por request via query params
+# --- Post-processing ---
+# Can be overridden per request via query params
 # DOC_PARSER_OCR_POSTPROCESS=true
 # DOC_PARSER_OCR_FIX_ERRORS=true
 
-# --- Paralelização ---
+# --- Parallelization ---
 # DOC_PARSER_PARALLEL_ENABLED=true
-# DOC_PARSER_PARALLEL_WORKERS=     # vazio = auto (cpu_count)
+# DOC_PARSER_PARALLEL_WORKERS=     # empty = auto (cpu_count)
 
-# --- PDF pesquisável ---
+# --- Searchable PDF ---
 # DOC_PARSER_SEARCHABLE_PDF=true
 
 # --- Debug ---
 # DOC_PARSER_VERBOSE=true
 
-# --- Diretórios ---
+# --- Directories ---
 # DOC_PARSER_OUTPUT_DIR=/app/output
