--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 # =============================================================================
-# Docker Compose para Doc Parser API com ROCm (AMD GPU)
+# Docker Compose for Doc Parser API with ROCm (AMD GPU)
 #
-# Uso:
+# Usage:
 #   docker compose up --build
-#   curl -X POST http://localhost:8000/process -F "file=@documento.pdf"
+#   curl -X POST http://localhost:8000/process -F "file=@document.pdf"
 #
-# Requisitos do host:
-#   - Driver amdgpu + ROCm instalados
-#   - Usuário no grupo video e render
+# Host requirements:
+#   - amdgpu driver + ROCm installed
+#   - User in video and render groups
 # =============================================================================
 
 services:
@@ -17,11 +17,11 @@ services:
     ports:
       - "8000:8000"
 
-    # Volume para output persistente
+    # Volume for persistent output
     volumes:
       - ./output:/app/output
 
-    # Acesso à GPU AMD via ROCm
+    # AMD GPU access via ROCm
     devices:
       - /dev/kfd:/dev/kfd
       - /dev/dri:/dev/dri
@@ -29,19 +29,19 @@ services:
       - video
       - render
 
-    # Recomendações ROCm (quick-start AMD)
+    # ROCm recommendations (AMD quick-start)
     ipc: host
     security_opt:
       - seccomp=unconfined
     shm_size: "8g"
 
-    # Variáveis de ambiente
+    # Environment variables
     env_file:
       - .env
     environment:
-      # gfx1100 = RDNA3 (RX 7900 XT) — safety net para ROCm < 7.2
+      # gfx1100 = RDNA3 (RX 7900 XT) — safety net for ROCm < 7.2
       - HSA_OVERRIDE_GFX_VERSION=11.0.0
-      # Otimização de alocação de memória PyTorch
+      # PyTorch memory allocation optimization
       - PYTORCH_HIP_ALLOC_CONF=max_split_size_mb:512
 
     restart: unless-stopped
