Fix sort blocks

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,9 @@
 # DOC_PARSER_MIN_CONFIDENCE=0.3
 
 # --- OCR Orientation (docTR) ---
+# For scanned documents with rotation/skew, try:
+#   ASSUME_STRAIGHT_PAGES=false, DETECT_ORIENTATION=true, STRAIGHTEN_PAGES=true
+# This improves accuracy but is slower.
 # DOC_PARSER_ASSUME_STRAIGHT_PAGES=true
 # DOC_PARSER_DETECT_ORIENTATION=false
 # DOC_PARSER_STRAIGHTEN_PAGES=false
@@ -40,6 +43,12 @@
 # Can be overridden per request via query params
 # DOC_PARSER_OCR_POSTPROCESS=true
 # DOC_PARSER_OCR_FIX_ERRORS=true
+
+# --- Reading Order ---
+# Vertical tolerance (0-1) for grouping blocks in the same row.
+# Increase if text at similar heights is being split; decrease if
+# unrelated blocks are merged together.
+# DOC_PARSER_READING_ORDER_Y_TOLERANCE=0.008
 
 # --- Parallelization ---
 # DOC_PARSER_PARALLEL_ENABLED=true
